new vocs, improved version generation

--- a/src/app/player/info.component.html
+++ b/src/app/player/info.component.html
@@ -7,9 +7,10 @@
       </ion-card-header>
 
       <ion-card-content>
-        The Semantic Machine is a song that slowly changes with your surroundings,
-        such as with the weather, places around you, or the time of day.
-        It will sound different everytime you listen to it so take your time to explore.
+        The Semantic Machine is a song that slowly changes with time, with
+        your environment, with the weather, and with the places around you.
+        It will be different everytime you listen to it. Take your time to explore,
+        move around, and most importantly, be patient and wait for things to change.
         <br>
         <br>
         Created by Tracy Redhead and Florian Thalmann.
